# Blender_bevy_components_worklflow

./: .gitignore
crates/blenvy/: Cargo.toml
crates/blenvy/src/blueprints/: animation.rs  materials.rs  spawn_from_blueprints.rs
crates/blenvy/src/components/: process_gltfs.rs  ronstring_to_reflect_component.rs
crates/blenvy/src/registry/: export_types.rs
crates/blenvy/src/save_load/: loading.rs  mod.rs  saving.rs
examples/animation/: Cargo.toml
examples/blueprints/: Cargo.toml
examples/components/: Cargo.toml
examples/demo/: Cargo.toml
examples/save_load/: Cargo.toml
examples/save_load/src/: main.rs
testing/bevy_example/: Cargo.toml
testing/bevy_example/src/: hierarchy_debug.rs
testing/bevy_example/src/game/: mod.rs
