[package]
name = "bevy_gltf_save_load_basic_example"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
bevy-inspector = ["bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.15.0-rc.1", features = ["dynamic_linking"] }
blenvy = { path = "../../crates/blenvy" }

serde_json = "1.0.108"
serde = "1.0.193"
rand = "0.8.5"

bevy-inspector-egui = { version = "0.25.1", optional = true}

[dev-dependencies]
#bevy-inspector-egui = { version = "0.25.1"}