[package]
name = "bevy_example"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["dynamic_linking", "bevy_state", "bevy_ui"] }
blenvy = { path = "../../crates/blenvy" }
#bevy_editor_pls = { version = "0.8" }
rand = "0.8.5"
json-writer ="0.3"

[dev-dependencies]
bevy-inspector-egui = { version = "0.25.1"}
